fixed paragraph spacing

--- a/pages/landing/components/FeaturesCallout/styles.styl
+++ b/pages/landing/components/FeaturesCallout/styles.styl
@@ -47,3 +47,7 @@
 
       p
         font-size: 1.4rem
+        margin-bottom: 0.4rem
+        
+        &:last-of-type
+          margin-bottom: 0
